[package]
name = "test-fixture"
version = "0.1.0"
authors = ["Martin Thomson <mt@lowentropy.net>"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
log = { workspace = true }
nss-rs = { workspace = true }

[features]
bench = ["nss-rs/bench"]
disable-random = []

[package.metadata.cargo-machete]
ignored = ["log"]

[lints]
workspace = true

[lib]
# See https://github.com/bheisler/criterion.rs/blob/master/book/src/faq.md#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false
